--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,3 +24,50 @@ jobs:
           destination: test-reports
       - store_test_results:
           path: ./build/test-results
+  integration_test:
+    docker:
+      - image: circleci/openjdk:8u181-jdk
+    working_directory: ~/repo
+    environment:
+      TERM: dumb
+    steps:
+      - checkout
+      - restore_cache:
+          keys:
+            - v1-dependencies-{{ checksum "build.gradle.kts" }}
+            - v1-dependencies-
+      - run: ./gradlew compileTestKotlin
+      - save_cache:
+          paths:
+            - ~/.gradle
+          key: v1-dependencies-{{ checksum "build.gradle.kts" }}
+      - run:
+          command: ./gradlew testIntegration
+      - store_artifacts:
+          path: ./build/reports/tests
+          destination: test-reports
+      - store_test_results:
+          path: ./build/test-results
+workflows:
+  version: 2
+  build:
+    jobs:
+      - build
+  build_and_integrationtests:
+    jobs:
+      - run-integrationtests:
+          type: approval
+      - integration_test:
+          requires:
+            - run-integrationtests
+  scheduled_integrationtests:
+    triggers:
+      - schedule:
+        cron: "0 0 * * SUN"
+        filter:
+          branches:
+            only:
+              - master
+    jobs:
+      - integration_test
+
