QUICK-224 fix yaml syntax

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -64,7 +64,7 @@ workflows:
     triggers:
       - schedule:
           cron: "0 0 * * SUN"
-          filter:
+          filters:
             branches:
               only:
                 - master
