QUICK-224 fix yaml syntax for cron command

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -63,7 +63,7 @@ workflows:
   scheduled_integrationtests:
     triggers:
       - schedule:
-          cron: "0 0 * * SUN"
+          cron: "0 0 * * 0"
           filters:
             branches:
               only:
