QUICK-224 Add provisioning a Jira licence to integration tests

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,7 +42,9 @@ jobs:
             - ~/.gradle
           key: v1-dependencies-{{ checksum "build.gradle.kts" }}
       - run:
-          command: ./gradlew testIntegration
+          command: |
+              echo ${JIRA_LICENSE} > jira-license.txt
+              ./gradlew testIntegration
       - store_artifacts:
           path: ./build/reports/tests
           destination: test-reports
