QUICK-224: Include the build number in AWS tags

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,7 +44,7 @@ jobs:
       - run:
           command: |
               echo ${JIRA_LICENSE} > jira-license.txt
-              ./gradlew testIntegration
+              USER=$CIRCLE_BUILD_URL ./gradlew testIntegration
           no_output_timeout: 70m
       - store_artifacts:
           path: ./build/reports/tests
