--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,7 +24,7 @@ jobs:
           destination: test-reports
       - store_test_results:
           path: ./build/test-results
-  integration_test:
+  test_integration:
     docker:
       - image: circleci/openjdk:8u181-jdk
     working_directory: ~/repo
@@ -53,17 +53,17 @@ jobs:
           path: ./build/test-results
 workflows:
   version: 2
-  build:
+  quick:
     jobs:
       - build
-  build_and_integrationtests:
+  wide:
     jobs:
-      - run-integrationtests:
+      - trigger:
           type: approval
-      - integration_test:
+      - test_integration:
           requires:
-            - run-integrationtests
-  scheduled_integrationtests:
+            - trigger
+  regular:
     triggers:
       - schedule:
           cron: "0 0 * * 0"
@@ -72,5 +72,5 @@ workflows:
               only:
                 - master
     jobs:
-      - integration_test
+      - test_integration
 
