--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,7 @@ jobs:
   build:
     docker:
       - image: circleci/openjdk:8u181-jdk
+    resource_class: large
     working_directory: ~/repo
     environment:
       TERM: dumb
