QUICK-224 identify the artifacts generated by the test

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,10 +45,14 @@ jobs:
           command: |
               echo ${JIRA_LICENSE} > jira-license.txt
               USER=$CIRCLE_BUILD_URL ./gradlew testIntegration
+              tree -d ./build/jpt-workspace
           no_output_timeout: 70m
       - store_artifacts:
           path: ./build/reports/tests
           destination: test-reports
+      - store_artifacts:
+          path: ./build/jpt-workspace/HardwareRecommendationEngineIT
+          destination: test-artifacts
       - store_test_results:
           path: ./build/test-results
 workflows:
